--- a/PingTool/App.xaml
+++ b/PingTool/App.xaml
@@ -1,7 +1,9 @@
-﻿<Application
+﻿
+<Application
     x:Class="PingTool.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="using:PingTool.Converters">
 
     <Application.Resources>
         <ResourceDictionary>
@@ -14,6 +16,7 @@
                 <ResourceDictionary Source="/Styles/TextBlock.xaml" />
                 <ResourceDictionary Source="/Styles/Page.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <conv:TextColorConverter x:Key="TextColorConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
