--- a/PingTool/App.xaml
+++ b/PingTool/App.xaml
@@ -7,6 +7,7 @@
 
     <Application.Resources>
         <ResourceDictionary>
+
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <ResourceDictionary Source="/Styles/_Colors.xaml" />
@@ -17,6 +18,10 @@
                 <ResourceDictionary Source="/Styles/Page.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <conv:TextColorConverter x:Key="TextColorConverter" />
+            <x:Double x:Key="NarrowMinWidth">0</x:Double>
+            <x:Double x:Key="NormalMinWidth">640</x:Double>
+            <x:Double x:Key="WideMinWidth">900</x:Double>
+            <x:Double x:Key="XWideMinWidth">1300</x:Double>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
